# azure-serverbased-realtime-learnyard

./: README.md  config.json  main.py  parms.json  project_flow.txt  pyproject.toml  template.py
.github/workflows/: docker_image.yaml  pipeline.yaml
app/: Dockerfile  app.py
app/templates/: index.html
src/components/: processing.py
src/config/: __init__.py
